[package]
name = "minipy"
version = "0.1.0"
authors = ["Techcable <Techcable@techcable.net>"]
edition = "2018"

[dependencies]
# Garbage collection
zerogc = { git = "https://github.com/DuckLogic/zerogc.git" }
# This is currently the only collector that doesn't crash ^_^
zerogc-simple = { git = "https://github.com/DuckLogic/zerogc.git" }
# Use RustPython for parsing
rustpython-parser = "^0.1"
# Utils
indexmap = "^1.3"
num-traits = "^0.2"